Changed from poems to jokes

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@ a {
     max-width: 600px;
 }
 
-
 header {
     margin-bottom: 30px;
 }
@@ -29,11 +28,9 @@ form {
     display: flex;
     padding: 30px;
     background-color: white;
-    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08) ;
+    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
     border-radius: 10px;
-    display: flex;
     margin-bottom: 30px;
-
 }
 
 .form-container {
@@ -66,7 +63,6 @@ form {
     display: none;
     margin-top: 5px;
     color: #6c757d;
-
 }
 
 .hint {
@@ -77,16 +73,14 @@ form {
     color: #6c757d;
 }
 
-
-
-.poem {
+.joke {
     font-size: 14px;
     background-color: white;
     display: block;
     padding: 20px;
     line-height: 2;
     border-left: 3px solid #885df1;
-    box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03) ;
+    box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
 }
 
 footer {
