--- a/css/styles.css
+++ b/css/styles.css
@@ -24,39 +24,40 @@ h1 {
     color: #272044;
 }
 
+.form-container {
+    margin-bottom: 30px;
+}
+
 form {
     display: flex;
+    flex-direction: column; 
     padding: 30px;
     background-color: white;
     box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
     border-radius: 10px;
-    margin-bottom: 30px;
 }
 
-.form-container {
-    position: relative;
-}
-
-.instructions {
+select, .instructions {
     padding: 10px;
     border: 1px solid rgba(39, 33, 66, 0.5);
-    width: 100%;
-    font-size: 16px;
     border-radius: 50px;
-    line-height: 20px;
+    margin-bottom: 10px; 
+    font-size: 16px;
     color: #272044;
-    position: relative;
+    width: 100%; 
+    box-sizing: border-box; 
 }
 
 .submit-button {
-    margin-left: 10px;
+    margin-top: 10px;
     background: #885df1;
     color: white;
     border: none;
-    width: 150px;
+    width: 100%; 
     font-size: 16px;
     border-radius: 50px;
-    padding: 14px 24px;
+    padding: 14px;
+    cursor: pointer;
 }
 
 .hidden {
@@ -66,14 +67,11 @@ form {
 }
 
 .hint {
-    position: absolute;
-    bottom: 10px; 
-    left: 20px; 
     font-size: 0.85rem;
     color: #6c757d;
 }
 
-.joke {
+#result {
     font-size: 14px;
     background-color: white;
     display: block;
@@ -81,6 +79,7 @@ form {
     line-height: 2;
     border-left: 3px solid #885df1;
     box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
+    margin-top: 20px; 
 }
 
 footer {
